# python-project-52

./: .gitignore  Makefile  README.md  db_dump.json  pyproject.toml  setup.cfg
.github/workflows/: build.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py  0003_alter_label_name.py  0004_remove_label_tasks.py
labels/templates/labels/: delete.html  index.html  update.html
locale/ru/LC_MESSAGES/: django.mo  django.po
main_app/: urls.py  views.py
main_app/templates/main_app/: base.html  (+1 more)
statuses/: models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json  users.json
statuses/migrations/: 0002_alter_status_options_alter_status_created_at_and_more.py  0003_alter_status_options.py
task_manager/: mixins.py  settings.py  urls.py
task_manager/labels/: tests.py  urls.py  views.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_alter_task_options_task_created_at_task_updated_at.py  0003_alter_task_created_at_alter_task_updated_at.py  0005_alter_task_name.py  0009_remove_task_performer_task_executor.py
templates/: base.html
users/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
users/fixtures/: data.json  users.json
(+30 files in other folders)
