[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager website"
authors = ["Pavel Krivosheev <pkrivosheev@bk.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
