[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager website"
authors = ["Pavel Krivosheev <pkrivosheev@bk.ru>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
    { include = "main_app" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
uvicorn = "^0.30.5"
django-bootstrap5 = "^24.2"
whitenoise = "^6.7.0"
django-filter = "^24.3"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
rollbar = "0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
ipython = "^8.26.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
